--- a/style.css
+++ b/style.css
@@ -4,3 +4,20 @@
     border-radius: 50%;
     object-fit: cover;
 }
+
+body {
+    background-color: #eaf6f6;
+}
+
+hr {
+    width: 5%;
+    border-style: none;
+    border-top: dotted;
+    border-color: grey;
+    border-width: 5px;
+}
+
+h1,
+h3 {
+    color: #66bfbf;
+}
